# Homework_Module_11_PythonWEB

./: README.md
hw_11/: pyproject.toml
hw_11/contact_manager/: Dockerfile  alembic.ini  docker-compose.yml
hw_11/contact_manager/alembic/: env.py
hw_11/contact_manager/alembic/versions/: 04d8d2b6d65c_initial_migration.py
hw_11/contact_manager/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
